[gd_scene load_steps=8 format=3 uid="uid://b2e8j4jvyboat"]

[ext_resource type="Script" uid="uid://3nhw5qp03dxo" path="res://src/connectable_button.gd" id="1_yho2a"]
[ext_resource type="Texture2D" uid="uid://bbpuykvydq6v6" path="res://icon.svg" id="2_ncpwd"]

[sub_resource type="Animation" id="Animation_6yf1o"]
resource_name = "press_down"

[sub_resource type="Animation" id="Animation_qquwy"]
resource_name = "press_up"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_osftr"]
_data = {
&"press_down": SubResource("Animation_6yf1o"),
&"press_up": SubResource("Animation_qquwy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hoc7j"]
size = Vector2(163, 162)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k0b66"]
size = Vector2(119, 122)

[node name="ConnectableButton" type="Node2D"]
script = ExtResource("1_yho2a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ncpwd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_osftr")
}

[node name="AreaDeClique" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeClique"]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_hoc7j")

[node name="AreaAtivacao" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAtivacao"]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_k0b66")
debug_color = Color(0.881112, 0.309537, 0.356557, 0.42)
